--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-/front/node_modules
-/front/dist
-/front/package-lock.json
 
-/server/node_modules
-/server/package-lock.json
+/node_modules
+/package-lock.json
